--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+
+    </style>
 </head>
 
 <body>
@@ -38,8 +41,10 @@
         </div>
     </nav>
     <section id="home" class="hero">
-        <div class="container">
-            <a href="#menu" class="btn btn-primary">Menu</a>
+        <div class="container text-center">
+            <h1 class="hero-title">Welcome to Our Restaurant</h1>
+            <p class="hero-subtitle">Experience the best dishes made with love and fresh ingredients.</p>
+            <a href="#menu" class="btn btn-primary">View Menu</a>
         </div>
     </section>
     <section id="menu" class="container my-5">
@@ -116,74 +121,72 @@
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
       </section>
-</body>
-<!-- Footer -->
-<footer class="bg-light text-center text-lg-start mt-5">
-    <!-- Section: Social media -->
-    <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-      <div class="me-5 d-none d-lg-block">
-        <span>Suivez-nous sur les réseaux sociaux :</span>
-      </div>
-      <div>
-        <a href="https://www.facebook.com" class="me-4 text-reset">
-          <i class="fab fa-facebook-f"></i>
-        </a>
-        <a href="https://www.twitter.com" class="me-4 text-reset">
-          <i class="fab fa-twitter"></i>
-        </a>
-        <a href="https://www.instagram.com" class="me-4 text-reset">
-          <i class="fab fa-instagram"></i>
-        </a>
-      </div>
-    </section>
-    <!-- Section: Links -->
-    <section class="p-4">
-      <div class="container text-center text-md-start">
-        <div class="row">
-          <div class="col-md-4 mx-auto mb-4">
-            <h6 class="text-uppercase fw-bold mb-4">
-              Restaurant Name
-            </h6>
-            <p>
-              Nous offrons des plats faits maison avec des ingrédients frais pour une expérience culinaire exceptionnelle. Venez nous rendre visite et découvrez nos délicieuses créations !
-            </p>
+    <!-- Footer -->
+    <footer class="bg-light text-center text-lg-start mt-5">
+        <!-- Section: Social media -->
+        <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+          <div class="me-5 d-none d-lg-block">
+            <span>Suivez-nous sur les réseaux sociaux :</span>
           </div>
-          <div class="col-md-4 mx-auto mb-4">
-            <h6 class="text-uppercase fw-bold mb-4">
-              Liens utiles
-            </h6>
-            <p>
-              <a href="#home" class="text-reset">Accueil</a>
-            </p>
-            <p>
-              <a href="#menu" class="text-reset">Menu</a>
-            </p>
-            <p>
-              <a href="#about" class="text-reset">À propos</a>
-            </p>
-            <p>
-              <a href="#contact" class="text-reset">Contact</a>
-            </p>
+          <div>
+            <a href="https://www.facebook.com" class="me-4 text-reset">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="https://www.twitter.com" class="me-4 text-reset">
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a href="https://www.instagram.com" class="me-4 text-reset">
+              <i class="fab fa-instagram"></i>
+            </a>
           </div>
-          <div class="col-md-4 mx-auto mb-4">
-            <h6 class="text-uppercase fw-bold mb-4">
-              Contact
-            </h6>
-            <p><i class="fas fa-home me-3"></i> Rue Sidi Mansour , Sfax , Tunis </p>
-            <p><i class="fas fa-envelope me-3"></i> SevenK@restaurant.com</p>
-            <p><i class="fas fa-phone me-3"></i> +123 456 789</p>
+        </section>
+        <!-- Section: Links -->
+        <section class="p-4">
+          <div class="container text-center text-md-start">
+            <div class="row">
+              <div class="col-md-4 mx-auto mb-4">
+                <h6 class="text-uppercase fw-bold mb-4">
+                  Restaurant Name
+                </h6>
+                <p>
+                  Nous offrons des plats faits maison avec des ingrédients frais pour une expérience culinaire exceptionnelle. Venez nous rendre visite et découvrez nos délicieuses créations !
+                </p>
+              </div>
+              <div class="col-md-4 mx-auto mb-4">
+                <h6 class="text-uppercase fw-bold mb-4">
+                  Liens utiles
+                </h6>
+                <p>
+                  <a href="#home" class="text-reset">Accueil</a>
+                </p>
+                <p>
+                  <a href="#menu" class="text-reset">Menu</a>
+                </p>
+                <p>
+                  <a href="#about" class="text-reset">À propos</a>
+                </p>
+                <p>
+                  <a href="#contact" class="text-reset">Contact</a>
+                </p>
+              </div>
+              <div class="col-md-4 mx-auto mb-4">
+                <h6 class="text-uppercase fw-bold mb-4">
+                  Contact
+                </h6>
+                <p><i class="fas fa-home me-3"></i> Rue Sidi Mansour , Sfax , Tunis </p>
+                <p><i class="fas fa-envelope me-3"></i> SevenK@restaurant.com</p>
+                <p><i class="fas fa-phone me-3"></i> +123 456 789</p>
+              </div>
+            </div>
           </div>
+        </section>
+        <!-- Section: Copyright -->
+        <div class="text-center p-4 bg-light">
+          <p>&copy; 2024 Restaurant Seven K. Tous droits réservés.</p>
         </div>
-      </div>
-    </section>
-    <!-- Section: Copyright -->
-    <div class="text-center p-4 bg-light">
-      <p>&copy; 2024 Restaurant Seven K. Tous droits réservés.</p>
-    </div>
-  </footer>
-  
-  <!-- FontAwesome Icons (pour les icônes sociales) -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
-  
-
+      </footer>
+      
+      <!-- FontAwesome Icons (pour les icônes sociales) -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
+</body>
 </html>
